@@ -127,6 +127,14 @@ multimedia stream.
 Each media stream information is printed within a dedicated section
 with name "STREAM".
 
+@item -count_frames
+Count the number of frames per stream and report it in the
+corresponding stream section.
+
+@item -count_packets
+Count the number of packets per stream and report it in the
+corresponding stream section.
+
 @item -show_private_data, -private
 Show private data, that is data depending on the format of the
 particular shown element.
